# python_docs

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: documentation.yml
demo/: index.html
docs/: demo.md  index.md
pydocs/: main.py  objetos_numpy.py  ppydantic.py
search/: search_index.json
